Ring test & PingPong done + excel created